<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="br.ufms.facom.activity.LobbyActivity" >

    <TextView
        android:id="@+id/txtWaitingPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/waiting_player"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtDeviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/device_name"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtOpponentDeviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/waiting"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>